fix: vuetify overrides z-index with style attr

--- a/client/scss/components/v-dialog.scss
+++ b/client/scss/components/v-dialog.scss
@@ -1,5 +1,5 @@
 .v-dialog__content {
-  z-index: 1001; // nav-header's index is 1000
+  z-index: 1001 !important;
 
   .v-dialog--scrollable {
     flex-direction: column;
